      140-2, Level 1 compliant JCA provider.
    * Updates RSASSASigner and RSASSAVerifier to support PS256, PS384 and PS512
      with the BouncyCastle FIPS JCA provider using the alternative JCA
      "SHA256withRSAandMGF1", "SHA384withRSAandMGF1" and "SHA512withRSAandMGF1"
      names (iss #403).
    * New BouncyCastleFIPSProviderSingleton class.
    * Updates JCASupport.isSupported(JWSAlgorithm, Provider) for the
      alternative JCA "SHA256withRSAandMGF1", "SHA384withRSAandMGF1" and
      "SHA512withRSAandMGF1" names to "RSASSA-PSS".

version 9.6.1 (2021-02-22)
    * Fixes new RSASSASigner(RSAKey) conversion to PrivateKey (iss #404).

version 9.7 (2021-02-22)
    * Adds JWTClaimsSet.toPayload() convenience method.

version 9.8 (2021-04-03)
    * Adds new package com.nimbusds.jose.mint with a JWS minter framework.

version 9.8.1 (2021-04-06)
    * Bumps JSON Smart to 1.3.2.
    * Cleans up / refactors code and tests.

version 9.9 (2021-04-26)
    * Deprecates the default DefaultJWTClaimsVerifier constructor to prevent
      insecure use (iss #417).
    * Edits the DefaultJWTClaimsVerifier JavaDoc.
    * Bumps JSON Smart to 1.3.3.

version 9.9.1 (2021-05-04)
    * Bumps JSON Smart to 2.4.7.

version 9.9.2 (2021-05-05)
    * Shades net.minidev:accessors-smart after the update to JSON Smart 2.4.7
      (iss #418).

version 9.9.3 (2021-05-07)
    * Shades org.ow2.asm:asm after the update to JSON Smart 2.4.7 (iss #419).

version 9.10 (2021-06-05)
    * Enforces a string length limit of 10K chars when parsing JOSE headers
      (after BASE64URL decoding). The 10K chars should be sufficient to
      accommodate JOSE headers with an X.509 certificate chain in the "x5c"
      header parameter (iss #424).
    * Prevents StackOverflowError when parsing a JOSE header with a very large
      number of nested JOSE objects (iss #425).
    * New static JSONObjectUtils.parse(java.lang.String, int) method with an
      argument to set a limit on the length of the parsed string.